syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";

package cartese; // <==== for Event Sourced Entity API

message AddLineItem {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
  string product_id = 2;
  string name = 3;
  int32 quantity = 4;
}

message ChangeLineItemQuantity {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
  string product_id = 2;
  int32 quantity = 3;
}

message RemoveLineItem {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
  string product_id = 2;
}

message CheckoutShoppingCart {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
}

message GetShoppingCart {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
}

message RemoveShoppingCart {
  string cart_id = 1 [(akkaserverless.field).entity_key = true];
}

message LineItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
}

message Cart {
  bool checked_out = 1;
  bool deleted = 2;
  repeated LineItem items = 3;
}

service CartService {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_ENTITY
    component: ".domain.ShoppingCartEse" // <==== for Event Sourced Entity API
  };

  rpc AddItem(AddLineItem) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/cart/{cart_id}/items/add"
      body: "*"
    };
  }

  rpc ChangeItem(ChangeLineItemQuantity) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/cart/{cart_id}/items/{product_id}/change"
      body: "*"
    };
  }

  rpc RemoveItem(RemoveLineItem) returns (google.protobuf.Empty) {
    option (google.api.http).put = "/cart/{cart_id}/items/{product_id}/remove";
  }

  rpc CheckoutCart(CheckoutShoppingCart) returns (google.protobuf.Empty) {
    option (google.api.http).put = "/cart/{cart_id}/checkout";
  }

  rpc GetCart(GetShoppingCart) returns (Cart) {
    option (google.api.http) = {
      get: "/carts/{cart_id}"
      additional_bindings: {
        get: "/carts/{cart_id}/items"
        response_body: "items"
      }
    };
  }

  rpc RemoveCart (RemoveShoppingCart) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/carts/{cart_id}/remove";
  }
}
